--- a/1-analyses/ablations/ablation.Rmd
+++ b/1-analyses/ablations/ablation.Rmd
@@ -57,8 +57,8 @@ ggplot(ablations, aes(Distance, Velocity)) +
         strip.text.x = element_text(size = 45),
         panel.background = element_rect(colour = "black", size=1),
         panel.spacing = unit(3, "lines"))
-ggsave("recoil-velocity.png", width = 14, height = 7)
-ggsave("recoil-velocity.svg", width = 14, height = 7)
+ggsave("2-plots/recoil-velocity.png", width = 14, height = 7)
+ggsave("2-plots/recoil-velocity.svg", width = 14, height = 7)
 ```
 
 ```{r stage}
