Add draft for more general intro paragraph

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1426,6 +1426,50 @@
   doi       = "10.1038/s41586-019-1492-9"
 }
 
+@ARTICLE{Wang2021-iy,
+  title    = "The origin and the mechanism of mechanical polarity during
+              epithelial folding",
+  author   = "Wang, Yu-Chiun",
+  abstract = "Epithelial tissues are sheet-like tissue structures that line the
+              inner and outer surfaces of animal bodies and organs. Their
+              remarkable ability to actively produce, or passively adapt to,
+              complex surface geometries has fascinated physicists and
+              biologists alike for centuries. The most simple and yet versatile
+              process of epithelial deformation is epithelial folding, through
+              which curved shapes, tissue convolutions and internal structures
+              are produced. The advent of quantitative live imaging, combined
+              with experimental manipulation and computational modeling, has
+              rapidly advanced our understanding of epithelial folding. In
+              particular, a set of mechanical principles has emerged to
+              illustrate how forces are generated and dissipated to instigate
+              curvature transitions in a variety of developmental contexts.
+              Folding a tissue requires that mechanical loads or geometric
+              changes be non-uniform. Given that polarity is the most distinct
+              and fundamental feature of epithelia, understanding epithelial
+              folding mechanics hinges crucially on how forces become polarized
+              and how polarized differential deformation arises, for which I
+              coin the term 'mechanical polarity'. In this review, five typical
+              modules of mechanical processes are distilled from a diverse
+              array of epithelial folding events. Their mechanical
+              underpinnings with regard to how forces and polarity intersect
+              are analyzed to accentuate the importance of mechanical polarity
+              in the understanding of epithelial folding.",
+  journal  = "Semin. Cell Dev. Biol.",
+  volume   =  120,
+  pages    = "94--107",
+  month    =  dec,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1016/j.semcdb.2021.05.027",
+  keywords = "Epithelial folding; Apical-basal polarity; Planar polarity;
+              Mechanical stress; Tissue strain; Curvature transition;- to be
+              read -;Mechano-development;Epithelial folding;Cephalic furrow
+              mechanics",
+  language = "en",
+  issn     = "1084-9521, 1096-3634",
+  pmid     = "34059419",
+  doi      = "10.1016/j.semcdb.2021.05.027"
+}
+
 @ARTICLE{Martin2010-pb,
   title    = "Integration of contractile forces during tissue invagination",
   author   = "Martin, Adam C and Gelbart, Michael and Fernandez-Gonzalez,
