Revise paragraph about initiator cells

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1271,7 +1271,8 @@
   month    =  jan,
   year     =  2021,
   url      = "https://doi.org/10.1038/s41580-020-00318-6",
-  keywords = "- important -;Cephalic furrow mechanics;Mechano-development",
+  keywords = "- important -;Cephalic furrow
+              mechanics;Mechano-development;Epithelial folding",
   issn     = "1471-0072, 1471-0080",
   doi      = "10.1038/s41580-020-00318-6"
 }
