Revise the evolutionary part of discussion

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1230,6 +1230,37 @@
   pmc      = "PMC7497624"
 }
 
+@ARTICLE{Heisenberg2013-pl,
+  title     = "Forces in tissue morphogenesis and patterning",
+  author    = "Heisenberg, Carl-Philipp and Bellaïche, Yohanns",
+  abstract  = "During development, mechanical forces cause changes in size,
+               shape, number, position, and gene expression of cells. They are
+               therefore integral to any morphogenetic processes. Force
+               generation by actin-myosin networks and force transmission
+               through adhesive complexes are two self-organizing phenomena
+               driving tissue morphogenesis. Coordination and integration of
+               forces by long-range force transmission and mechanosensing of
+               cells within tissues produce large-scale tissue shape changes.
+               Extrinsic mechanical forces also control tissue patterning by
+               modulating cell fate specification and differentiation. Thus,
+               the interplay between tissue mechanics and biochemical signaling
+               orchestrates tissue morphogenesis and patterning in development.",
+  journal   = "Cell",
+  publisher = "Elsevier",
+  volume    =  153,
+  number    =  5,
+  pages     = "948--962",
+  month     =  may,
+  year      =  2013,
+  url       = "http://dx.doi.org/10.1016/j.cell.2013.05.008",
+  keywords  = "- important -;Morphogenesis;Mechano-development;Cephalic furrow
+               mechanics",
+  language  = "en",
+  issn      = "0092-8674, 1097-4172",
+  pmid      = "23706734",
+  doi       = "10.1016/j.cell.2013.05.008"
+}
+
 @ARTICLE{Collinet2021-qa,
   title    = "Programmed and self-organized flow of information during
               morphogenesis",
