Add FlyBase citation

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -194,7 +194,7 @@
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/11748148",
   keywords = "pax3/7 = paired;evx = even skipped;buttonhead;- important
               -;Cephalic furrow;Molecular patterning;Morphogenesis;Cephalic
-              furrow mechanics",
+              furrow mechanics;Key papers",
   language = "en",
   issn     = "0950-1991",
   pmid     = "11748148"
@@ -317,7 +317,7 @@
   url      = "http://dx.doi.org/10.1016/j.ydbio.2015.03.022",
   keywords = "Apical constriction; Cell shape change; Cephalic furrow;
               Gastrulation; Invagination; Morphogenesis;- important -;Cephalic
-              furrow;Cephalic furrow mechanics",
+              furrow;Cephalic furrow mechanics;Key papers",
   language = "en",
   issn     = "0012-1606, 1095-564X",
   pmid     = "25929228",
@@ -777,6 +777,44 @@
   pmc      = "PMC2753456"
 }
 
+@ARTICLE{Gramates2022-xe,
+  title     = "Fly Base: a guided tour of highlighted features",
+  author    = "Gramates, L Sian and Agapite, Julie and Attrill, Helen and
+               Calvi, Brian R and Crosby, Madeline A and Dos Santos, Gilberto
+               and Goodman, Joshua L and Goutte-Gattat, Damien and Jenkins,
+               Victoria K and Kaufman, Thomas and Larkin, Aoife and Matthews,
+               Beverley B and Millburn, Gillian and Strelets, Victor B and {the
+               FlyBase Consortium}",
+  abstract  = "FlyBase provides a centralized resource for the genetic and
+               genomic data of Drosophila melanogaster. As FlyBase enters our
+               fourth decade of service to the research community, we reflect
+               on our unique aspects and look forward to our continued
+               collaboration with the larger research and model organism
+               communities. In this study, we emphasize the dedicated reports
+               and tools we have constructed to meet the specialized needs of
+               fly researchers but also to facilitate use by other research
+               communities. We also highlight ways that we support the fly
+               community, including an external resources page, help resources,
+               and multiple avenues by which researchers can interact with
+               FlyBase.",
+  journal   = "Genetics",
+  publisher = "Oxford University Press (OUP)",
+  volume    =  220,
+  number    =  4,
+  pages     = "iyac035",
+  month     =  apr,
+  year      =  2022,
+  url       = "https://academic.oup.com/genetics/article-pdf/220/4/iyac035/43709097/iyac035.pdf",
+  keywords  = "Drosophila ; FlyBase; model organism database;Cephalic furrow
+               mechanics",
+  copyright = "https://creativecommons.org/licenses/by/4.0/",
+  language  = "en",
+  issn      = "0016-6731, 1943-2631",
+  pmid      = "35266522",
+  doi       = "10.1093/genetics/iyac035",
+  pmc       = "PMC8982030"
+}
+
 @ARTICLE{Schmid2019-bm,
   title    = "3Dscript: animating {3D/4D} microscopy data using a
               natural-language-based syntax",
@@ -1013,7 +1051,7 @@
   keywords = "Drosophila;buttonhead;evx = even skipped;- important -;Cephalic
               furrow;Head-Trunk Boundary;Molecular
               patterning;Morphogenesis;Mitotic domains;Cephalic furrow
-              mechanics",
+              mechanics;Key papers",
   language = "en",
   issn     = "0950-1991",
   pmid     = "9367430"
@@ -1121,7 +1159,8 @@
               shortening; epithelial folding; lateral myosin contractility;
               mechanical noise; morphogenetic precision; myosin planar
               polarity; optogenetics; robustness; tissue-scale mechanical
-              coupling;- important -;Cephalic furrow;Cephalic furrow mechanics",
+              coupling;- important -;Cephalic furrow;Cephalic furrow
+              mechanics;Key papers",
   language = "en",
   issn     = "1534-5807, 1878-1551",
   pmid     = "32169160",
