Add reference for data repository

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1867,3 +1867,15 @@
   doi       = "10.1007/s00427-015-0504-5",
   pmc       = "PMC4460289"
 }
+
+@MISC{Vellutini_undated-ou,
+  title    = "Supplementary information for the cephalic furrow project",
+  author   = "Vellutini, Bruno Cossermelli",
+  abstract = "This repository contains data, analyses, and supporting
+              information associated with our project about the role of the
+              cephalic furrow to the mechanics of gastrulation in Drosophila.",
+  url      = "https://git.mpi-cbg.de/cosserme/cephalic-furrow",
+  note     = "Title of the publication associated with this dataset: MPI-CBG
+              GitLab Instance",
+  keywords = "Datasets;Cephalic furrow mechanics"
+}
