--- a/1-analyses/ablations/ablation.Rmd
+++ b/1-analyses/ablations/ablation.Rmd
@@ -31,9 +31,13 @@ levels(ablations$Stage) <- c("early", "mid", "late")
 
 ```{r summary}
 # Calculate summaries per sample
-by(ablations[ablations$Position == "A", c("Velocity")], ablations[ablations$Position == "A",]$Stage, summary)
-print("")
-by(ablations[ablations$Position == "P", c("Velocity")], ablations[ablations$Position == "P",]$Stage, summary)
+capture.output(
+  print("ANTERIOR ABLATIONS"),
+  by(ablations[ablations$Position == "A", c("Velocity")], ablations[ablations$Position == "A",]$Stage, summary),
+  print("POSTERIOR ABLATIONS"),
+  by(ablations[ablations$Position == "P", c("Velocity")], ablations[ablations$Position == "P",]$Stage, summary),
+  file = "summary.txt"
+)
 ```
 
 ## Plot overview
@@ -64,10 +68,12 @@ ggsave("2-plots/recoil-velocity.svg", width = 14, height = 7)
 ```{r stage}
 set.seed(1234)
 # Plot mean length of cephalic furrow per embryo (right/left sides)
-ggplot(ablations[ablations$Velocity > 0,], aes(Stage, Velocity)) +
+#ggplot(ablations[ablations$Velocity > 0,], aes(Distance, Velocity, color = Stage))
+ggplot(ablations, aes(Distance, Velocity, color = Stage)) +
   #geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, fill = "#e69f03", scale = "area", adjust = 2) +
   #geom_boxplot(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, fill = "#e69f03", scale = "area", adjust = 2) +
-  geom_bar(stat = "summary", fun = "mean", alpha = 0.7, width = 0.5, fill = "#e69f03", show.legend = FALSE) +
+  #geom_bar(stat = "summary", fun = "mean", alpha = 0.7, width = 0.5, fill = "#e69f03", show.legend = FALSE) +
+  #geom_smooth(span = 0.8, show.legend = FALSE, aes(fill = "#e69f03", colour = "#e69f03")) +
   geom_quasirandom(size = 2, width = 0.1, alpha = 0.9, show.legend = FALSE) +
   #geom_errorbar(aes(ymin=Mean-SD, ymax=Mean+SD), show.legend = FALSE)+
   #geom_jitter(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
@@ -76,7 +82,7 @@ ggplot(ablations[ablations$Velocity > 0,], aes(Stage, Velocity)) +
   #geom_pointrange(aes(ymax=Velocity+Error), position = position_quasirandom(width = 0.15, bandwidth = 0.1), show.legend = FALSE) +
   labs(x = "stage", y = "velocity (µm/s)") +
   scale_fill_manual(values=c("#e69f03", "#56b4e9")) +
-  scale_y_continuous(limits = c(0, 0.3)) +
+  #scale_y_continuous(limits = c(0, 0.3)) +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 30),
         panel.background = element_rect(colour = "black", size=1))
